@@ -53,8 +53,8 @@ interpolate_data()
 
     /* lets take a look at it.  Refine to 100 points in both directions. */
     rt_nurb_kvknot(&new_kv, srf.order[0], 0.0, 1.0, 100, (struct resource *)NULL);
-    srf2 = (struct face_g_snurb *) rt_nurb_s_refine(&srf, 0, &new_kv, (struct resource *)NULL);
-    srf3 = (struct face_g_snurb *) rt_nurb_s_refine(srf2, 1, &new_kv, (struct resource *)NULL);
+    srf2 = (struct face_g_snurb *) nmg_nurb_s_refine(&srf, 0, &new_kv, (struct resource *)NULL);
+    srf3 = (struct face_g_snurb *) nmg_nurb_s_refine(srf2, 1, &new_kv, (struct resource *)NULL);
 
     /* Draw refined mesh in yellow */
     pl_color(stdout, 200, 200, 50);
